<resources>
    <string name="app_name">Seatudy</string>
    <string name="title_instructor">instructor</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_course">Course</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>

    <string name="tab_course">Course Programs</string>
    <string name="tab_instructor">Instructor</string>
    <string name="tab_reviews">Reviews</string>
    <string name="tab_forum">Forum</string>

    <string name="tab_syllabus">Syllabus</string>
    <string name="tab_submission">Submission</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_balance">My Balance</string>
    <string name="sign_out_of_my_account">Sign out of my account</string>
    <string name="top_up">Top Up</string>

</resources>