<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/icon_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/icon_dashboard"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_course"
        android:icon="@drawable/icon_course"
        android:title="@string/title_course" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/icon_cart"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/title_profile" />

</menu>